# Spotv

backend/: pyproject.toml  spotv.db
backend/app/: db.py  main.py
backend/app/models/: chatModel.py  subtitleModel.py  vedioModel.py
backend/app/routers/: vedioApi.py
backend/app/schemas/: chatMessage.py  subtitleSchema.py  vedioSchema.py
frontend/: README.md
