[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Leonpei <peileon2@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.41"
aiosqlite = "^0.21.0"
ffmpeg-python = "^0.2.0"
yt-dlp = "^2025.4.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-backend = "app.main:app"
